--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
     "format": "npm run prettier:fix && npm run lint:fix"
   },
   "author": "GermanMakarkin",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^8.6.0",
     "eslint-plugin-node": "^11.1.0",
     "readline-sync": "^1.4.10"
+  },
+  "bin": {
+    "brain-games": "bin/brain-games.js",
+    "brain-even": "bin/brain-even.js"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.0",
