--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   },
   "bin": {
     "brain-games": "bin/brain-games.js",
-    "brain-even": "bin/brain-even.js"
+    "brain-even": "bin/brain-even.js",
+    "brain-calc": "bin/brain-even.js"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.0",
