--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
   "bin": {
     "brain-games": "bin/brain-games.js",
     "brain-even": "bin/brain-even.js",
-    "brain-calc": "bin/brain-even.js"
+    "brain-calc": "bin/brain-calc.js",
+    "brain-prime": "bin/brain-prime.js",
+    "brain-gcd": "bin/brain-gcd.js",
+    "brain-progression": "bin/brain-progression.js"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.0",
